[package]
name = "ask-human"
version = "0.1.0"
edition = "2021"
description = "MCP tool that lets AI agents ask the human operator questions via a desktop UI"

[[bin]]
name = "ask-human"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
